<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_title"
        android:id="@+id/textView9"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_title_description"
        android:id="@+id/textView10"
        android:textStyle="italic"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_promoter"
        android:id="@+id/textView8"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_promoter_description"
        android:id="@+id/textView11"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_author"
        android:id="@+id/textView12"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textColor="#ffffff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/about_author_description"
        android:id="@+id/textView13"
        android:layout_gravity="center_horizontal"
        android:textStyle="italic"
        android:textColor="#ffffff" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:src="@drawable/ita_logo"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/ita" />
</LinearLayout>